--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </style>
   </head>
   <body>
+    <div id="popup"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
